Fixed layout issue signin/signup pages

--- a/app/public/modules/calendar/less/calendar.less
+++ b/app/public/modules/calendar/less/calendar.less
@@ -1,6 +1,7 @@
 .calendar-wrapper {
   width: 97%;
   margin: 0 auto;
+  padding-top: 3em;
 }
 .fc-button {
   outline: none;
@@ -14,6 +15,8 @@
   .fc-button {
 	margin: 0;
 	border-radius: 0;
+	z-index: 1;
+
 	&:first-child {
 	  border-top-left-radius: 4px;
 	  border-bottom-left-radius: 4px;
